Update jakarta-tomcat to version 3.2.1.
Changes in the package since version 3.1.1 (the last pkgsrc version):
=====================================================================

  * tomcat is now always installed under ${PREFIX}/tomcat.  Making
    ${TOMCAT_HOME} configurable added much complexity for not real
    gain.

    It had been my intention to aim for a hier(7) like install for
    tomcat with this version, but at this point there are way to many
    hard-coded relative paths (relative to tomcat.home) in tomcat,
    and in addition, all of the (quite good, really) documentation
    assumes the standard install paths.

    Note that the previous default value of ${TOMCAT_HOME} was
    ${PREFIX}/jakarta/tomcat.

  * an rc.subr compatible (but not requiring) startup script is now installed
    as ${PREFIX}/etc/rc.d/tomcat.

  * if Sun's JSSE (Java Secure Socket Extensions) is in ${CLASSPATH} when
    the pkg is built, tomcat will be built with support for SSL in the
    standalone server mode.  This soft dependency will be replaced by a
    hard dependency as soon as I get a chance to import a JSSE package
    (soon).

  * likewise, I will import an ap-jk package for the new apache connector
    (mod_jk) soon.  ap-jserv continues to be usable for this purpose.

Changes in tomcat itself since version 3.1.1:
=============================================

New in tomcat-3.2.1:
--------------------
Tomcat 3.2.1 is a maintenance and bug fix release, based on the Tomcat 3.2
(final) code base.  The following changes are included:

- Disallowed requesting JSP pages under the WEB-INF directory
  (/WEB-INF/dummy.jsp).  Previously, only requests for static files
  were being disallowed.

- The JDBCRealm request interceptor will now log the description of any
  JDBC exception that occurs, to aid in debugging.

SECURITY VULNERABILITIES FIXED IN TOMCAT 3.2.1
(note that these fixes were also made to the tomcat-3.1 branch in tomcat 3.1.1)

Protection of Resources in /WEB-IN

--- a/www/jakarta-tomcat/Makefile
+++ b/www/jakarta-tomcat/Makefile
@@ -1,45 +1,42 @@
-# $NetBSD: Makefile,v 1.14 2001/02/25 04:18:23 hubertf Exp $
+# $NetBSD: Makefile,v 1.15 2001/03/28 02:46:07 jwise Exp $
 
-DISTNAME=	jakarta-tomcat.src
-PKGNAME=	jakarta-tomcat-3.1.1
+DISTNAME=	${PKGNAME}-src
+PKGNAME=	jakarta-tomcat-3.2.1
 CATEGORIES=	www
-MASTER_SITES=	http://jakarta.apache.org/builds/tomcat/release/v3.1.1/src/
-DISTFILES=	jakarta-tomcat-3.1.1-src.tar.gz jakarta-tools.tar.gz jakarta-ant.tar.gz
+MASTER_SITES=	http://jakarta.apache.org/builds/tomcat/release/v3.2.1/src/
 
 MAINTAINER=	jwise@netbsd.org
 HOMEPAGE=	http://jakarta.apache.org/
 COMMENT=	the Apache Project's Java Servlet 2.2 and JSP 1.1 server
 
-DIST_SUBDIR=	jakarta-3.1.1
+DEPENDS+=	jakarta-servletapi:../../www/jakarta-servletapi
 
 USE_JAVA=	yes
+WRKSRC=		${WRKDIR}/${DISTNAME}
 
-WRKSRC=		${WRKDIR}/jakarta-tomcat-3.1.1-src
+CLASSPATH:=	${LOCALBASE}/lib/java/servlet.jar:${LOCALBASE}/lib/jaxp.jar:${LOCALBASE}/lib/parser.jar:${CLASSPATH}
+MAKEFILE=	build.xml
+MAKE_FLAGS+=	-Dpkgsrc.prefix=${PREFIX}
+MAKE_ENV+=	JAVA_HOME=${JAVA_HOME} CLASSPATH=${CLASSPATH}
+ALL_TARGET=	main
+INSTALL_TARGET=	dist
 
-JAKARTA_HOME=	${PREFIX}/jakarta
-MAKE_ENV+=	JAVA_HOME=${JAVA_HOME}
+DEINSTALL_FILE=		${PKGDIR}/DEINSTALL
+INSTALL_FILE=		${WRKDIR}/INSTALL
 
-MESSAGE_SUBST+=	TOMCAT_HOME=${JAKARTA_HOME}
+post-build:
+	${SED}	-e "s|@PREFIX@|${PREFIX}|g"				\
+		${FILESDIR}/tomcat.sh > ${WRKDIR}/tomcat.sh
 
-post-patch:
-	${SED} -e s,@JAKARTA_HOME@,${JAKARTA_HOME},g \
-		< ${WRKSRC}/build.xml > ${WRKSRC}/build.tmp
-	${MV} ${WRKSRC}/build.tmp ${WRKSRC}/build.xml
-	${SED} -e s,@LOCALBASE@,${LOCALBASE},g \
-		< ${WRKSRC}/src/share/org/apache/tomcat/task/ApacheConfig.java \
-		> ${WRKSRC}/src/share/org/apache/tomcat/task/ApacheConfig.java.tmp
-	${MV} ${WRKSRC}/src/share/org/apache/tomcat/task/ApacheConfig.java.tmp \
-		${WRKSRC}/src/share/org/apache/tomcat/task/ApacheConfig.java
+pre-install:
+	${SED}	-e "s|@CAT@|${CAT}|g"					\
+		-e "s|@CHMOD@|${CHMOD}|g"				\
+		-e "s|@CP@|${CP}|g"					\
+		${PKGDIR}/INSTALL > ${INSTALL_FILE}
 
-do-build:
-	cd ${WRKSRC}/../jakarta-ant && ${SH} bootstrap.sh
-	cd ${WRKSRC} && ${SH} ./build.sh
-
-do-install:
-	${INSTALL_DATA_DIR} ${JAKARTA_HOME}/tomcat
-	cd ${WRKSRC} && ${SH} ./build.sh dist
-	${CHMOD} +x ${JAKARTA_HOME}/tomcat/bin/*.sh
-	${RM} ${JAKARTA_HOME}/tomcat/bin/*.bat
-	${RM} ${JAKARTA_HOME}/tomcat/bin/tomcat.sh.orig
+post-install:
+	${INSTALL_SCRIPT} ${WRKDIR}/tomcat.sh ${PREFIX}/etc/rc.d/tomcat
+	PKG_PREFIX=${PREFIX} ${SH} ${INSTALL_FILE} ${PKGNAME} POST-INSTALL
 
 .include "../../mk/bsd.pkg.mk"
+MAKE_PROGRAM=	${LOCALBASE}/bin/ant
