--- a/net/tor/Makefile
+++ b/net/tor/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.121 2017/05/17 07:13:37 adam Exp $
+# $NetBSD: Makefile,v 1.122 2017/06/14 16:16:04 wiz Exp $
 
-DISTNAME=		tor-0.3.0.7
+DISTNAME=		tor-0.3.0.8
 CATEGORIES=		net security
 MASTER_SITES=		http://www.torproject.org/dist/
 
