--- a/mail/postfix/Makefile.common
+++ b/mail/postfix/Makefile.common
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile.common,v 1.9 2017/04/24 20:11:40 fhajny Exp $
+# $NetBSD: Makefile.common,v 1.10 2017/06/17 08:02:22 taca Exp $
 # used by mail/postfix/Makefile
 # used by mail/postfix/Makefile.module
 
-DISTNAME=	postfix-3.2.0
+DISTNAME=	postfix-3.2.2
 CATEGORIES=	mail
 MASTER_SITES=	ftp://ftp.porcupine.org/mirrors/postfix-release/official/
 MASTER_SITES+=	http://postfix.it-austria.net/releases/official/
