--- a/net/wireshark/Makefile
+++ b/net/wireshark/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.168 2017/04/22 21:03:53 adam Exp $
+# $NetBSD: Makefile,v 1.169 2017/06/19 20:22:20 wiz Exp $
 
-DISTNAME=	wireshark-2.2.6
-PKGREVISION=	1
+DISTNAME=	wireshark-2.2.7
 CATEGORIES=	net
 MASTER_SITES=	https://www.wireshark.org/download/src/
 EXTRACT_SUFX=	.tar.bz2
