--- a/mail/squirrelmail/Makefile
+++ b/mail/squirrelmail/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.132 2017/04/19 17:10:18 maya Exp $
+# $NetBSD: Makefile,v 1.133 2017/06/21 15:07:03 taca Exp $
 
-DISTNAME=	squirrelmail-webmail-1.4.23pre14605
-PKGREVISION=	1
+DISTNAME=	squirrelmail-webmail-1.4.23pre14688
 PKGNAME=	${DISTNAME:S/-webmail//}
 CATEGORIES=	mail www
 MASTER_SITES=	${MASTER_SITE_LOCAL}
