--- a/www/drupal7/Makefile
+++ b/www/drupal7/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.45 2017/05/20 18:20:02 adam Exp $
+# $NetBSD: Makefile,v 1.46 2017/06/22 13:09:39 taca Exp $
 
-DISTNAME=	drupal-7.54
+DISTNAME=	drupal-7.56
 PKGNAME=	${PHP_PKG_PREFIX}-${DISTNAME}
 CATEGORIES=	www
 MASTER_SITES=	http://ftp.drupal.org/files/projects/
