--- a/biology/Makefile
+++ b/biology/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.42 2017/05/10 15:09:47 mef Exp $
+# $NetBSD: Makefile,v 1.43 2018/04/27 20:30:24 bacon Exp $
 #
 
 COMMENT=	Software for the biological sciences
@@ -26,6 +26,7 @@ SUBDIR+=	lucy
 SUBDIR+=	mopac
 SUBDIR+=	mpqc
 SUBDIR+=	mummer
+SUBDIR+=	ncbi-blast+
 SUBDIR+=	nut
 SUBDIR+=	openbabel
 SUBDIR+=	p5-Bio-ASN1-EntrezGene
