--- a/biology/Makefile
+++ b/biology/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.43 2018/04/27 20:30:24 bacon Exp $
+# $NetBSD: Makefile,v 1.44 2018/04/30 16:53:07 bacon Exp $
 #
 
 COMMENT=	Software for the biological sciences
@@ -22,6 +22,7 @@ SUBDIR+=	gnome-chemistry-utils
 SUBDIR+=	gp
 SUBDIR+=	gromacs
 SUBDIR+=	hmmer
+SUBDIR+=	htslib
 SUBDIR+=	lucy
 SUBDIR+=	mopac
 SUBDIR+=	mpqc
