--- a/net/miniupnpc/Makefile
+++ b/net/miniupnpc/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2017/07/03 11:53:57 wiedi Exp $
+# $NetBSD: Makefile,v 1.3 2018/10/03 22:27:05 nia Exp $
 
-DISTNAME=	miniupnpc-2.0
-PKGREVISION=	1
+DISTNAME=	miniupnpc-2.1
 CATEGORIES=	net
 MASTER_SITES=	http://miniupnp.free.fr/files/download.php?file=
 
