--- a/sysutils/xentools411/Makefile
+++ b/sysutils/xentools411/Makefile
@@ -1,14 +1,13 @@
-# $NetBSD: Makefile,v 1.8 2019/08/11 13:23:18 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2019/08/30 13:16:27 bouyer Exp $
 #
-VERSION=	4.11.1
+VERSION=	4.11.2
 VERSION_IPXE=	356f6c1b64d7a97746d1816cef8ca22bdd8d0b5d
 DIST_IPXE=	ipxe-git-${VERSION_IPXE}.tar.gz
 
 DIST_SUBDIR=		xen411
 DISTNAME=		xen-${VERSION}
 PKGNAME=		xentools411-${VERSION}
-PKGREVISION=		2
-#PKGREVISION=		2
+#PKGREVISION=		0
 CATEGORIES=		sysutils
 MASTER_SITES=		https://downloads.xenproject.org/release/xen/${VERSION}/
 
