--- a/sysutils/xentools48/Makefile
+++ b/sysutils/xentools48/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.28 2019/08/11 13:23:18 wiz Exp $
+# $NetBSD: Makefile,v 1.29 2019/08/30 13:23:10 bouyer Exp $
 #
-VERSION=	4.8.3
+VERSION=	4.8.5
 VERSION_IPXE=	827dd1bfee67daa683935ce65316f7e0f057fe1c
 DIST_IPXE=	ipxe-git-${VERSION_IPXE}.tar.gz
 DIST_NEWLIB=	newlib-1.16.0.tar.gz
@@ -19,7 +19,7 @@ PKGNAME=		xentools48-${VERSION}
 CATEGORIES=		sysutils
 MASTER_SITES=		https://downloads.xenproject.org/release/xen/${VERSION}/
 
-PKGREVISION=		8
+#PKGREVISION=		0
 
 DISTFILES=		${DISTNAME}.tar.gz
 
