--- a/www/grafana/Makefile
+++ b/www/grafana/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.16 2019/08/27 10:23:25 adam Exp $
+# $NetBSD: Makefile,v 1.17 2019/08/30 17:05:22 tnn Exp $
 
-DISTNAME=	grafana-6.3.3
+DISTNAME=	grafana-6.3.4
 CATEGORIES=	www
 MASTER_SITES=	${MASTER_SITE_GITHUB:=grafana/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
