--- a/www/seamonkey/Makefile
+++ b/www/seamonkey/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.195 2019/08/11 13:25:08 wiz Exp $
+# $NetBSD: Makefile,v 1.196 2019/09/04 20:07:53 nia Exp $
 
 DISTNAME=	seamonkey-${SM_VER}.source
 PKGNAME=	seamonkey-${SM_VER:S/b/beta/}
-PKGREVISION=	13
-SM_VER=		2.49.4
+SM_VER=		2.49.5
 CATEGORIES=	www
 MASTER_SITES=	${MASTER_SITE_MOZILLA:=seamonkey/releases/${SM_VER}/source/}
 EXTRACT_SUFX=	.tar.xz
