--- a/mail/exim/Makefile
+++ b/mail/exim/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.169 2019/08/11 13:21:27 wiz Exp $
+# $NetBSD: Makefile,v 1.170 2019/09/06 12:57:33 wiedi Exp $
 
-DISTNAME=	exim-4.92.1
-PKGREVISION=	1
+DISTNAME=	exim-4.92.2
 CATEGORIES=	mail net
 MASTER_SITES=	ftp://ftp.exim.org/pub/exim/exim4/
 MASTER_SITES+=	https://ftp.exim.org/pub/exim/exim4/
